--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
                 <li class="nav-item active">
                   <a class="nav-item nav-link" href="/">Home</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-item nav-link" href="/scoreboard.html">Scoreboard</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Scoreboard</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/scoreboard.html">Globale</a></li>
+                    <li><a class="dropdown-item" href="/scoreboard_junior.html">Categoria Junior</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
@@ -39,10 +43,7 @@
               </ul>
             </div>
              <div class="navbar-nav">                     
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="btn btn-primary btn-lg" href="/register.html" role="button" style="margin-right:10px;">Iscriviti</a>    
-                </li>         
+              <ul class="navbar-nav">        
                 <li>
                 <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
                 </li>
@@ -60,10 +61,6 @@
             <hr class="my-4">
             <h1 class="display-4">Coppa Italiana CTF</h1>
             <p class="lead">CyberCup è il primo torneo italiano di Capture The Flag</p>
-            <p class="lead"><b>Sono aperte le iscrizioni per la 2° Edizione</b></p>
-            <p class="lead">
-              <a class="btn btn-primary btn-lg" href="/register.html" role="button">Iscriviti</a>
-            </p>
             <hr class="my-4">
           </div>
         </div>
