--- a/scoreboard.html
+++ b/scoreboard.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-         <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
             <div class="container">
                 <a class="navbar-brand" href="/"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -21,8 +21,12 @@
                 <li class="nav-item active">
                   <a class="nav-item nav-link" href="/">Home</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-item nav-link" href="/scoreboard.html">Scoreboard</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Scoreboard</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/scoreboard.html">Globale</a></li>
+                    <li><a class="dropdown-item" href="/scoreboard_junior.html">Categoria Junior</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
@@ -39,10 +43,7 @@
               </ul>
             </div>
              <div class="navbar-nav">                     
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="btn btn-primary btn-lg" href="/register.html" role="button" style="margin-right:10px;">Iscriviti</a>    
-                </li>         
+              <ul class="navbar-nav">        
                 <li>
                 <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
                 </li>
@@ -52,10 +53,9 @@
         <!-- Page content-->
         <div class="container">
            <div class="row align-items-center text-center">
-                <h1>Scoreboard</h1>
+                <h1>Scoreboard Globale</h1>
           </div>
             <div class="text-center mt-5">
-              <p>CyberCup.IT 2024 Non è ancora iniziata, <a href="/register.html"> registrati </a></p>
                 <table class="table">
                   <thead>
                     <tr>
@@ -120,6 +120,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
-        <!--<script>buildScoreboard();</script>-->
+        <script>buildScoreboard('/teams.json');</script>
     </body>
 </html>
