--- a/scoreboard_junior.html
+++ b/scoreboard_junior.html
@@ -51,27 +51,26 @@
           </div>
         </nav>
         <!-- Page content-->
-
-         <div class="container" style="background-color: #e3f2fd;">
-      <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
-        <h3 class="border-bottom mb-4 text-center">Calendario CTF CyberCup 2024 (2° Edizione)</h3>
-        <div class="card text-center">
-          <div class="card-header">
+        <div class="container">
+           <div class="row align-items-center text-center">
+                <h1>Scoreboard - Categoria Junior</h1>
           </div>
-          <div class="card-body">
-            <h5 class="card-title">Settembre 2023 (-1° Round - Questo round non sarà conteggiato nella scoreboard finale):</h5>
-            <h6>TeamItaly CTF</h6>
-            <p class="card-text">Inizio: 30 Settembre 2023, 14:00 CEST - Fine: 1 Ottobre 2023, 14:00 CEST <br><a href="https://ctf.teamitaly.eu/">Sito Ufficiale</a> <a href="https://ctftime.org/event/2088">CTFtime</a></p>
-            <h5 class="card-title">Ottobre 2023 (1° Round):</h5>
-            <h6>Srdnlen CTF</h6>
-            <p class="card-text">Inizio: 28 Ottobre 2023, TBA - Fine: 29 Ottobre 2023, TBA <br><a href="javascript:alert('TBA')">Sito Ufficiale</a> <a href="javascript:alert('TBA')">CTFtime</a></p>
-            <h5 class="card-title">Novembre 2023 (2° Round):</h5>
-            <h6>saarCTF</h6>
-            <p class="card-text">Inizio: 18 Novembre 2023, 14:00 CET - Fine: 18 Novembre 2023, 23:00 CET <br><a href="https://ctf.saarland/">Sito Ufficiale</a> <a href="https://ctftime.org/event/2049">CTFtime</a></p>
-          </div>
+            <div class="text-center mt-5">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Team Name</th>
+                      <th scope="col">Affiliation</th>
+                      <th scope="col">Score</th>
+                      <th scope="col">Logo</th>
+                    </tr>
+                  </thead>
+                  <tbody id="scoreboard">
+                  </tbody>
+                </table>
+            </div>
         </div>
-      </section>
-    </div>
 <footer class="bg-light text-center text-lg-start">
   <!-- Grid container -->
   <div class="container p-4">
@@ -113,7 +112,7 @@
 
   <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © Cybercup.IT 2024
+            © Cybercup.IT 2023
           </div>
   <!-- Copyright -->
 </footer>
@@ -121,5 +120,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
+        <script>buildScoreboard('/teams_junior.json');</script>
     </body>
 </html>
