--- a/calendar.html
+++ b/calendar.html
@@ -64,7 +64,7 @@
             <p class="card-text">Inizio: 30 Settembre 2023, 14:00 CEST - Fine: 1 Ottobre 2023, 14:00 CEST <br><a href="https://ctf.teamitaly.eu/">Sito Ufficiale</a> <a href="https://ctftime.org/event/2088">CTFtime</a></p>
             <h5 class="card-title">Ottobre 2023 (1° Round):</h5>
             <h6>Srdnlen CTF</h6>
-            <p class="card-text">Inizio: 28 Ottobre 2023, TBA - Fine: 29 Ottobre 2023, TBA <br><a href="javascript:alert('TBA')">Sito Ufficiale</a> <a href="javascript:alert('TBA')">CTFtime</a></p>
+            <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a href="https://ctftime.org/event/2129">CTFtime</a></p>
             <h5 class="card-title">Novembre 2023 (2° Round):</h5>
             <h6>saarCTF</h6>
             <p class="card-text">Inizio: 18 Novembre 2023, 14:00 CET - Fine: 18 Novembre 2023, 23:00 CET <br><a href="https://ctf.saarland/">Sito Ufficiale</a> <a href="https://ctftime.org/event/2049">CTFtime</a></p>
