--- a/who.html
+++ b/who.html
@@ -10,49 +10,25 @@
         <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script>
+          function bodyLoad(){
+            elmnt = document.getElementById("navbarInclude")
+            
+            xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+              if (this.readyState == 4) {
+                if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+                if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+                }
+              }
+            xhttp.open("GET", "/navbar.html", true);
+            xhttp.send();
+          }
+        </script>
     </head>
-    <body>
+    <body onload="bodyLoad()">
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #e3f2fd;">
-            <div class="container">
-                <a class="navbar-brand" href="/"><img src="/assets/logo.png" width="30" height="30" alt="">CyberCup.IT</a> 
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-item nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Scoreboard</a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/scoreboard.html">Globale</a></li>
-                    <li><a class="dropdown-item" href="/scoreboard_junior.html">Categoria Junior</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-item nav-link" href="/calendar.html">Calendario CTF</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Hall Of Fame</a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/hall_of_fame_2023.html">2023 (1° Edizione)</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-             <div class="navbar-nav">                     
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="btn btn-primary btn-lg" href="/register.html" role="button" style="margin-right:10px;">Iscriviti</a>    
-                </li>         
-                <li>
-                <a class="btn btn-primary btn-lg" href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
-                </li>
-            </div>
-          </div>
-        </nav>
+        <div id="navbarInclude"> </div>
         <!-- Page content-->
         <div class="container" style="background-color: #e3f2fd;">
           <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
