Added missing container

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
   <!-- Responsive navbar-->
   <div id="navbarInclude"></div>
   <!-- Page content-->
-  <div class="jumbotron">
-    <div class="row align-items-center text-center align-top pt-4">
-      <h1>CyberCup.IT 2024<img src="/assets/logo.png" width="60" height="60" alt=""></h1>
-      <p class="lead mission">CyberCup è il primo torneo italiano di Capture The Flag</p>
+  <div class="container text-center" >
+    <div class="jumbotron">
+      <div class="row align-items-center text-center align-top pt-4">
+        <h1>CyberCup.IT 2024<img src="/assets/logo.png" width="60" height="60" alt=""></h1>
+        <p class="lead mission">CyberCup è il primo torneo italiano di Capture The Flag</p>
+      </div>
     </div>
   </div>
   <div class="container text-center" style="background-color: #e3f2fd;">
