--- a/calendar.html
+++ b/calendar.html
@@ -56,7 +56,7 @@
       <div class="card-body border-bottom">
         <h5 class="card-title">Ottobre 2023 (1° Round):</h5>
         <h6>Srdnlen CTF</h6>
-        <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a class="mx-1" href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2129">CTFtime</a> <a class="mx-1" href="#">Writeups</a></p>
+        <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a class="mx-1" href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2129">CTFtime</a> <a class="mx-1" href="https://drive.google.com/drive/folders/1PnZr_BJ5rhRGyPky7rRo4e8WJ3ms8cIt?usp=sharing">Writeups</a></p>
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Novembre 2023 (2° Round):</h5>
