--- a/who.html
+++ b/who.html
@@ -9,7 +9,10 @@
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="css/styles.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+  
   <script>
     function bodyLoad(){
       navbar = document.getElementById("navbarInclude")
@@ -69,9 +72,9 @@
     
   </div>
   <footer id="footerInclude"> </footer>
-  <!-- Bootstrap core JS-->
+  <!-- Bootstrap core JS
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
+  Core theme JS-->
   <script src="/js/scripts.js"></script>
 </body>
 </html>
