--- a/calendar.html
+++ b/calendar.html
@@ -8,8 +8,10 @@
   <title>CyberCup.IT</title>
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-  <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="css/styles.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)--><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+  
   <script>
     function bodyLoad(){
       navbar = document.getElementById("navbarInclude")
@@ -56,7 +58,7 @@
       <div class="card-body border-bottom">
         <h5 class="card-title">Ottobre 2023 (1° Round):</h5>
         <h6>Srdnlen CTF</h6>
-        <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a class="mx-1" href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2129">CTFtime</a> <a class="mx-1" href="#">Writeups</a></p>
+        <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a class="mx-1" href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2129">CTFtime</a> <a class="mx-1" href="https://drive.google.com/drive/folders/1PnZr_BJ5rhRGyPky7rRo4e8WJ3ms8cIt?usp=sharing">Writeups</a></p>
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Novembre 2023 (2° Round):</h5>
@@ -80,9 +82,9 @@
   </div>
   <footer id="footerInclude">
   </footer>
-  <!-- Bootstrap core JS-->
+  <!-- Bootstrap core JS
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
+  Core theme JS-->
   <script src="/js/scripts.js"></script>
 </body>
 </html>
