Update calendar.html with correct information about snakeCTF (#16)
* Update calendar.html with correct infos

* Update calendar.html with start and end of CTF

--- a/calendar.html
+++ b/calendar.html
@@ -67,8 +67,8 @@
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Dicembre 2023 (3° Round):</h5>
-        <h6>Madrhacks CTF</h6>
-        <p class="card-text">Inizio: TBD - Fine: TBD <br><a class="mx-1" href="#">Sito Ufficiale</a> <a class="mx-1" href="#">CTFtime</a></p>
+        <h6>snakeCTF</h6>
+        <p class="card-text">Inizio: 9 dicembre 2023, 10:00 CET - Fine: 10 dicembre 2023, 10:00 CET <br><a class="mx-1" href="https://2023.snakectf.org">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2158">CTFtime</a></p>
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Gennaio 2024 (4° Round):</h5>
