--- a/navbar.html
+++ b/navbar.html
@@ -16,6 +16,9 @@
         </ul>
       </li>
       <li class="nav-item mx-auto" role="presentation">
+        <a class="nav-item nav-link" href="/writeups.html">Writeups</a>
+      </li>
+      <li class="nav-item mx-auto" role="presentation">
         <a class="nav-item nav-link" href="/who.html">Organizzatori</a>
       </li>
       <li class="nav-item mx-auto" role="presentation">
