Modificato logo cyberspeck, aggiornato calendario, aggiornata scoreboard writeup con vincitore 2° round

--- a/calendar.html
+++ b/calendar.html
@@ -58,20 +58,25 @@
       <div class="card-body border-bottom">
         <h5 class="card-title">Ottobre 2023 (1° Round):</h5>
         <h6>Srdnlen CTF</h6>
-        <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a class="mx-1" href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2129">CTFtime</a> <a class="mx-1" href="https://drive.google.com/drive/folders/1PnZr_BJ5rhRGyPky7rRo4e8WJ3ms8cIt?usp=sharing">Writeups</a></p>
+        <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a class="mx-1" href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2129">CTFtime</a><a class="mx-1" href="https://drive.google.com/drive/folders/1PnZr_BJ5rhRGyPky7rRo4e8WJ3ms8cIt?usp=sharing">Writeups</a></p>
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Novembre 2023 (2° Round):</h5>
         <h6>saarCTF</h6>
-        <p class="card-text">Inizio: 18 Novembre 2023, 14:00 CET - Fine: 18 Novembre 2023, 23:00 CET <br><a class="mx-1" href="https://ctf.saarland/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2049">CTFtime</a></p>
+        <p class="card-text">Inizio: 18 Novembre 2023, 14:00 CET - Fine: 18 Novembre 2023, 23:00 CET <br><a class="mx-1" href="https://ctf.saarland/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2049">CTFtime</a><a class="mx-1" href="https://drive.google.com/drive/folders/13svRpJTAy7PZAuokcdEhJ5k1GrJPZPPs?usp=sharing">Writeups</a></p>
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Dicembre 2023 (3° Round):</h5>
         <h6>snakeCTF</h6>
-        <p class="card-text">Inizio: 9 dicembre 2023, 10:00 CET - Fine: 10 dicembre 2023, 10:00 CET <br><a class="mx-1" href="https://2023.snakectf.org">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2158">CTFtime</a></p>
+        <p class="card-text">Inizio: 9 dicembre 2023, 10:00 CET - Fine: 10 dicembre 2023, 10:00 CET <br><a class="mx-1" href="https://2023.snakectf.org">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2158">CTFtime</a><a class="mx-1" href="https://drive.google.com/drive/folders/1yKV97K70OqWMCwGhKqShpfAhYUu9gRuU?usp=sharing">Writeups</a></p>
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Gennaio 2024 (4° Round):</h5>
+        <h6>Insomni'hack teaser</h6>
+        <p class="card-text">Inizio: 20/01/2024, 10:00 CET - Fine: 21/01/2024, 10:00 CET <br><a class="mx-1" href="https://insomnihack.ch/contests/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2139">CTFtime</a></p>
+      </div>
+      <div class="card-body border-bottom">
+        <h5 class="card-title">Febbraio 2024 (5° Round):</h5>
         <h6>TBD</h6>
         <p class="card-text">Inizio: TBD - Fine: TBD <br><a class="mx-1" href="#">Sito Ufficiale</a> <a class="mx-1" href="#">CTFtime</a></p>
       </div>
