--- a/calendar.html
+++ b/calendar.html
@@ -77,8 +77,13 @@
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Febbraio 2024 (5° Round):</h5>
-        <h6>TBD</h6>
-        <p class="card-text">Inizio: TBD - Fine: TBD <br><a class="mx-1" href="#">Sito Ufficiale</a> <a class="mx-1" href="#">CTFtime</a></p>
+        <h6>LA CTF 2024</h6>
+        <p class="card-text">Inizio: 17/02/2024, 05:00 CET - Fine: 18/02/2024, 23:00 CET <br><a class="mx-1" href="https://lac.tf/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2102">CTFtime</a></p>
+      </div>
+      <div class="card-body border-bottom">
+        <h5 class="card-title">Marzo 2024 (6° Round):</h5>
+        <h6>LINE CTF 2024</h6>
+        <p class="card-text">Inizio: 23/03/2024, 01:00 CET - Fine: 24/03/2024, 01:00 CET <br><a class="mx-1" href="https://linectf.me/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2119">CTFtime</a></p>
       </div>
       <div class="card-footer border-bottom">
         <p class="card-text">*Il calendario del campionato viene aggiornato in base agli eventi disponibili per quel periodo.</p>
