--- a/calendar.html
+++ b/calendar.html
@@ -85,6 +85,16 @@
         <h6>LINE CTF 2024</h6>
         <p class="card-text">Inizio: 23/03/2024, 01:00 CET - Fine: 24/03/2024, 01:00 CET <br><a class="mx-1" href="https://linectf.me/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2119">CTFtime</a></p>
       </div>
+      <div class="card-body border-bottom">
+        <h5 class="card-title">Aprile 2024 (7° Round):</h5>
+        <h6>UMass CTF 2024</h6>
+        <p class="card-text">Inizio: 20/04/2024, 00:00 CEST - Fine: 22/03/2024, 00:00 CEST <br><a class="mx-1" href="https://ctf.umasscybersec.org/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2287">CTFtime</a></p>
+      </div>
+      <div class="card-body border-bottom">
+        <h5 class="card-title">Maggio 2024 (8° Round):</h5>
+        <h6>CrewCTF 2024</h6>
+        <p class="card-text">Inizio: 24/05/2024, 19:00 CEST - Fine: 26/05/2024, 19:00 CEST <br><a class="mx-1" href="https://crewc.tf/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2223">CTFtime</a></p>
+      </div>
       <div class="card-footer border-bottom">
         <p class="card-text">*Il calendario del campionato viene aggiornato in base agli eventi disponibili per quel periodo.</p>
       </div>
