--- a/calendar.html
+++ b/calendar.html
@@ -92,8 +92,8 @@
       </div>
       <div class="card-body border-bottom">
         <h5 class="card-title">Maggio 2024 (8° Round):</h5>
-        <h6>CrewCTF 2024</h6>
-        <p class="card-text">Inizio: 24/05/2024, 19:00 CEST - Fine: 26/05/2024, 19:00 CEST <br><a class="mx-1" href="https://crewc.tf/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2223">CTFtime</a></p>
+        <h6>L3akCTF 2024</h6>
+        <p class="card-text">Inizio: 24/05/2024, 14:00 CEST - Fine: 26/05/2024, 14:00 CEST <br><a class="mx-1" href="https://ctf.l3ak.team/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2322">CTFtime</a></p>
       </div>
       <div class="card-footer border-bottom">
         <p class="card-text">*Il calendario del campionato viene aggiornato in base agli eventi disponibili per quel periodo.</p>
