--- a/calendar.html
+++ b/calendar.html
@@ -95,6 +95,11 @@
         <h6>L3akCTF 2024</h6>
         <p class="card-text">Inizio: 24/05/2024, 14:00 CEST - Fine: 26/05/2024, 14:00 CEST <br><a class="mx-1" href="https://ctf.l3ak.team/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2322">CTFtime</a></p>
       </div>
+      <div class="card-body border-bottom">
+        <h5 class="card-title">Giugno 2024 (9° Round):</h5>
+        <h6>UIUCTF 2024</h6>
+        <p class="card-text">Inizio: 29/06/2024, 02:00 CEST - Fine: 01/07/2024, 02:00 CEST <br><a class="mx-1" href="https://uiuc.tf/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2275">CTFtime</a></p>
+      </div>
       <div class="card-footer border-bottom">
         <p class="card-text">*Il calendario del campionato viene aggiornato in base agli eventi disponibili per quel periodo.</p>
       </div>
