--- a/calendar.html
+++ b/calendar.html
@@ -48,57 +48,12 @@
   <div class="container pt-4 pb-4">
     <div class="card text-center">
       <div class="card-header">
-        <h3 class="text-center">Calendario CTF CyberCup 2024 (2° Edizione)</h3>
+        <h3 class="text-center">Calendario CTF CyberCup 2025 (3° Edizione)</h3>
       </div>
       <div class="card-body border-bottom">
-        <h5 class="card-title">Settembre 2023 (-1° Round - Questo round non sarà conteggiato nella scoreboard finale):</h5>
-        <h6>TeamItaly CTF</h6>
-        <p class="card-text">Inizio: 30 Settembre 2023, 14:00 CEST - Fine: 1 Ottobre 2023, 14:00 CEST <br><a class="mx-1" href="https://ctf.teamitaly.eu/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2088">CTFtime</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Ottobre 2023 (1° Round):</h5>
+        <h5 class="card-title">Gennaio 2025 (1° Round):</h5>
         <h6>Srdnlen CTF</h6>
-        <p class="card-text">Inizio: 28 Ottobre 2023, 16:00 CEST - Fine: 29 Ottobre 2023, 15:00 CET <br><a class="mx-1" href="https://ctf.srdnlen.it">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2129">CTFtime</a><a class="mx-1" href="https://drive.google.com/drive/folders/1PnZr_BJ5rhRGyPky7rRo4e8WJ3ms8cIt?usp=sharing">Writeups</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Novembre 2023 (2° Round):</h5>
-        <h6>saarCTF</h6>
-        <p class="card-text">Inizio: 18 Novembre 2023, 14:00 CET - Fine: 18 Novembre 2023, 23:00 CET <br><a class="mx-1" href="https://ctf.saarland/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2049">CTFtime</a><a class="mx-1" href="https://drive.google.com/drive/folders/13svRpJTAy7PZAuokcdEhJ5k1GrJPZPPs?usp=sharing">Writeups</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Dicembre 2023 (3° Round):</h5>
-        <h6>snakeCTF</h6>
-        <p class="card-text">Inizio: 9 dicembre 2023, 10:00 CET - Fine: 10 dicembre 2023, 10:00 CET <br><a class="mx-1" href="https://2023.snakectf.org">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2158">CTFtime</a><a class="mx-1" href="https://drive.google.com/drive/folders/1yKV97K70OqWMCwGhKqShpfAhYUu9gRuU?usp=sharing">Writeups</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Gennaio 2024 (4° Round):</h5>
-        <h6>Insomni'hack teaser</h6>
-        <p class="card-text">Inizio: 20/01/2024, 10:00 CET - Fine: 21/01/2024, 10:00 CET <br><a class="mx-1" href="https://insomnihack.ch/contests/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2139">CTFtime</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Febbraio 2024 (5° Round):</h5>
-        <h6>LA CTF 2024</h6>
-        <p class="card-text">Inizio: 17/02/2024, 05:00 CET - Fine: 18/02/2024, 23:00 CET <br><a class="mx-1" href="https://lac.tf/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2102">CTFtime</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Marzo 2024 (6° Round):</h5>
-        <h6>LINE CTF 2024</h6>
-        <p class="card-text">Inizio: 23/03/2024, 01:00 CET - Fine: 24/03/2024, 01:00 CET <br><a class="mx-1" href="https://linectf.me/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2119">CTFtime</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Aprile 2024 (7° Round):</h5>
-        <h6>UMass CTF 2024</h6>
-        <p class="card-text">Inizio: 20/04/2024, 00:00 CEST - Fine: 22/03/2024, 00:00 CEST <br><a class="mx-1" href="https://ctf.umasscybersec.org/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2287">CTFtime</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Maggio 2024 (8° Round):</h5>
-        <h6>L3akCTF 2024</h6>
-        <p class="card-text">Inizio: 24/05/2024, 14:00 CEST - Fine: 26/05/2024, 14:00 CEST <br><a class="mx-1" href="https://ctf.l3ak.team/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2322">CTFtime</a></p>
-      </div>
-      <div class="card-body border-bottom">
-        <h5 class="card-title">Giugno 2024 (9° Round):</h5>
-        <h6>UIUCTF 2024</h6>
-        <p class="card-text">Inizio: 29/06/2024, 02:00 CEST - Fine: 01/07/2024, 02:00 CEST <br><a class="mx-1" href="https://uiuc.tf/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2275">CTFtime</a></p>
+        <p class="card-text">Inizio: 18 Gennaio 2025, 19:00 CET - Fine: 19 Gennaio 2025, 19:00 CEST <br><a class="mx-1" href="https://ctf.srdnlen.it/">Sito Ufficiale</a> <a class="mx-1" href="https://ctftime.org/event/2576">CTFtime</a></p>
       </div>
       <div class="card-footer border-bottom">
         <p class="card-text">*Il calendario del campionato viene aggiornato in base agli eventi disponibili per quel periodo.</p>
