--- a/hall_of_fame_2023.html
+++ b/hall_of_fame_2023.html
@@ -47,7 +47,7 @@
   <div class="jumbotron">
     <div class="row align-items-center text-center align-top pt-4">
       <h1>CyberCup.IT 2023 <img src="/assets/logo.png" width="60" height="60" alt=""></h1>
-      <p class="lead mission">Riassunto edizione 1° edizione</p>
+      <p class="lead mission">Riassunto 1° edizione</p>
     </div>
   </div>
   <div class="container">    
