--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="container text-center" >
     <div class="jumbotron">
       <div class="row align-items-center text-center align-top pt-4">
-        <h1>CyberCup.IT 2024<img src="/assets/logo.png" width="60" height="60" alt=""></h1>
+        <h1>CyberCup.IT 2025<img src="/assets/logo.png" width="60" height="60" alt=""></h1>
         <p class="lead mission">CyberCup è il primo torneo italiano di Capture The Flag</p>
       </div>
     </div>
@@ -56,7 +56,7 @@
     <div class="jumbotron justify-content-center">
       <hr class="my-4">
       <h1 class="display-4">Come funziona CyberCup?</h1>
-      <p class="mission">Il programma consiste in un torneo Capture The Flag, costituito da vari eventi selezionati tra le gare internazionali a disposizione. Al torneo potranno partecipare tutte le squadre (senza limiti al numero di partecipanti) che si iscriveranno, incluse quelle di nuova costituzione. La competizione sarà caratterizzata da un <a href="scoreboard.html">ranking</a> delle squadre, il punteggio dipende dalle performance ad ogni gara selezionata. Gli eventi di CyberCup verranno accuratamente scelti in accordo alla qualità e al livello di difficoltà da un comitato tecnico. Avranno maggiore priorità le competizioni organizzate da università e da squadre CTF italiane. Gli eventi avranno una difficoltà bilanciata in modo da accogliere sia squadre con poca esperienza che quelle più preparate.</p>
+      <p class="mission">Il programma consiste in un torneo Capture The Flag, costituito da vari eventi organizzati da team italiani. Al torneo potranno partecipare tutte le squadre (senza limiti al numero di partecipanti) che si iscriveranno, incluse quelle di nuova costituzione. La competizione sarà caratterizzata da un <a href="scoreboard.html">ranking</a> delle squadre, il punteggio dipende dalle performance ad ogni gara selezionata. Gli eventi avranno una difficoltà bilanciata in modo da accogliere sia squadre con poca esperienza che quelle più preparate.</p>
       <hr class="my-4">
     </div>
   </div>
@@ -65,7 +65,7 @@
   <div class="container">
     <div class="row align-items-center">
       <h2>Struttura del torneo</h2>
-      <p>CyberCup inizia ad Ottobre 2023 e termina a Giugno 2024. Verrà svolta una gara al mese.</p>
+      <p>CyberCup inizia a Gennaio 2025 e termina a Giugno 2025. Verrà svolta una gara al mese.</p>
       <p>I team saranno divisi in due categorie: Junior e Senior. Sarà presente una classifica generale ed una classifica solo per i team Junior. I team Junior potranno partecipare ad entrambe le classifiche. </p>
       <p>La categoria Junior può essere richiesta secondo i seguenti requisiti:</p>
       <ul>
@@ -81,7 +81,7 @@
       <h2 >Punteggio</h2>
       <p>I punteggi saranno calcolati basandosi sulla posizione nella classifica globale</p>
       <p>Viene assegnato un gettone di presenza (1 punto) per la semplice presenza alla gara (intesa come invio del sanity check), a prescindere dal risultato</p>
-      <p>Il punteggio per ogni gara è dato dall’interpolazione lineare dei punteggi già definiti nella scorsa edizione (2022), ovvero:</p>
+      <p>Il punteggio per ogni gara è dato dall’interpolazione lineare dei seguenti punteggi</p>
       <ul> 
         <li>50 punti se si è arrivati primi nella classifica globale</li>
         <li>45 nei primi 5</li>
