--- a/navbar.html
+++ b/navbar.html
@@ -30,6 +30,9 @@
           <li><a class="dropdown-item" href="/hall_of_fame_2023.html">2023 (1° Edizione)</a></li>
         </ul>
       </li>
+      <li class="nav-item mx-auto" role="presentation">
+        <a class="nav-item nav-link" href="/register.html" role="button">Iscriviti</a>     
+      </li> 
       <form class="nav-item form-inline my-2 my-lg-0 mx-auto" role="presentation">
         <a class="btn btn-light btn-lg  " href="https://discord.gg/rq3PGpzgqp" role="button">Server Discord</a>
       </form>
