--- a/scoreboard.html
+++ b/scoreboard.html
@@ -70,7 +70,7 @@
   <!-- Bootstrap core JS
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   Core theme JS-->
-  <script src="/js/scripts.js"></script>
-  <script>buildScoreboard('/teams.json');</script>
+  <!-- <script src="/js/scripts.js"></script>
+  <script>buildScoreboard('/teams.json');</script> -->
 </body>
 </html>
