--- a/writeups.html
+++ b/writeups.html
@@ -72,6 +72,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   Core theme JS-->
   <script src="/js/scripts.js"></script>
-  <script>buildWriteupScoreboard('/writeup_teams.json');</script>
+  <!-- <script>buildWriteupScoreboard('/writeup_teams.json');</script> -->
 </body>
 </html>
