--- a/navbar.html
+++ b/navbar.html
@@ -28,6 +28,7 @@
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Hall Of Fame</a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="/hall_of_fame_2023.html">2023 (1° Edizione)</a></li>
+          <li><a class="dropdown-item" href="/hall_of_fame_2024.html">2024 (2° Edizione)</a></li>
         </ul>
       </li>
       <li class="nav-item mx-auto" role="presentation">
