--- a/register.html
+++ b/register.html
@@ -41,7 +41,9 @@
     }
   </script>
     </head>
-    <body>
+    <body onload="bodyLoad()">
+      <!-- Responsive navbar-->
+      <div id="navbarInclude"></div>
         <!-- Page content-->
         <div class="container" style="background-color: #e3f2fd;">
           <section class="bg-light pt-5 pb-5 shadow-sm" style="background-color: #e3f2fd;">
@@ -76,8 +78,8 @@ b) per aggiornarti su nuove iniziative organizzate o supportate dal Cybersecurit
 <br><br>
 <div>
   <h3>Form di iscrizione a CyberCup.IT 2025</h3>
-  <p> Se non visualizzi il form sottostante puoi compilarlo facendo click <a href="https://forms.gle/ypchStbQ8JZQmxGEA">qui</a></p>
-<iframe src="https://forms.gle/ypchStbQ8JZQmxGEA" style="width:100%;height:1500px"></iframe>
+  <p> Iscriviti tramite il seguente link <a href="https://forms.gle/ypchStbQ8JZQmxGEA">Google Forms</a></p>
+<!-- <iframe src="https://forms.gle/ypchStbQ8JZQmxGEA" style="width:100%;height:1500px"></iframe> -->
 </div>
 </div>
 </section>
