--- a/writeups.html
+++ b/writeups.html
@@ -47,8 +47,8 @@
   <!-- Page content-->
   <div class="container mt-3">
     <div class="row align-items-center text-center">
-      <h1>Writeup Competition Winners</h1>
-      <p>Per leggere i writeup dei vari team fai click <a href="https://drive.google.com/drive/folders/1PnZr_BJ5rhRGyPky7rRo4e8WJ3ms8cIt?usp=sharing">qui</a></p>
+      <h1>Writeup Competition Scoreboard</h1>
+      <!-- <p>Per leggere i writeup dei vari team fai click <a href="TODO">qui</a></p> -->
     </div>
     <div class="text-center mt-5">
       <table class="table">
